tests/snapshots/type_resolver__type_resolver@28_valid_empty_function.lang-2.snap
---
source: tests/type_resolver.rs
expression: hir
input_file: tests/type_resolver/28_valid_empty_function.lang
---
funs:
  empty_function:
    return_ty:
      kind: Void
    body: []
  main:
    return_ty:
      kind: Void
    body: []
