tests/snapshots/type_resolver__type_resolver@28_valid_empty_function.lang.snap
---
source: tests/type_resolver.rs
expression: result
input_file: tests/type_resolver/28_valid_empty_function.lang
---
Ok: ~
