tests/snapshots/type_resolver__type_resolver@29_nested_if_non_bool.lang.snap
---
source: tests/type_resolver.rs
expression: result
input_file: tests/type_resolver/29_nested_if_non_bool.lang
---
Err:
  NonBooleanCondition:
    found:
      kind: Num
