tests/snapshots/type_resolver__type_resolver@30_undefined_var_in_condition.lang.snap
---
source: tests/type_resolver.rs
expression: result
input_file: tests/type_resolver/30_undefined_var_in_condition.lang
---
Err:
  UndefinedVar:
    name: undefined_var
