tests/snapshots/type_resolver__type_resolver@31_valid_function_calls.lang.snap
---
source: tests/type_resolver.rs
expression: result
input_file: tests/type_resolver/31_valid_function_calls.lang
---
Ok: ~
