tests/snapshots/type_resolver__type_resolver@32_valid_assignments.lang.snap
---
source: tests/type_resolver.rs
expression: result
input_file: tests/type_resolver/32_valid_assignments.lang
---
Ok: ~
