tests/snapshots/type_resolver__type_resolver@33_invalid_call_undefined_function.lang.snap
---
source: tests/type_resolver.rs
expression: result
input_file: tests/type_resolver/33_invalid_call_undefined_function.lang
---
Err:
  UndefinedFun:
    name: undefined_function
