tests/snapshots/type_resolver__type_resolver@35_invalid_call_arg_type_mismatch.lang.snap
---
source: tests/type_resolver.rs
expression: result
input_file: tests/type_resolver/35_invalid_call_arg_type_mismatch.lang
---
Err:
  TypeMismatch:
    expected:
      kind: Num
    found:
      kind: Bool
