tests/snapshots/type_resolver__type_resolver@36_invalid_assign_undefined_variable.lang.snap
---
source: tests/type_resolver.rs
expression: result
input_file: tests/type_resolver/36_invalid_assign_undefined_variable.lang
---
Err:
  UndefinedVar:
    name: undefined_var
