tests/snapshots/type_resolver__type_resolver@38_invalid_assign_wrong_return_type.lang.snap
---
source: tests/type_resolver.rs
expression: result
input_file: tests/type_resolver/38_invalid_assign_wrong_return_type.lang
---
Err:
  TypeMismatch:
    expected:
      kind: Num
    found:
      kind: Bool
